<resources>
    <string name="app_name">My Application Class</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="text_label1">Minha Linda Calculadora</string>
    <string name="text_field_label1">Number 1</string>
    <string name="text_field_label2">Number 2</string>
    <string name="text_label2">Resultado</string>
    <string name="button_label4">/</string>
    <string name="button_label2">-</string>
    <string name="button_label3">*</string>
    <string name="button_label1">+</string>
</resources>